welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.East)
               ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.West)
               ^DwarfCode:12: error: not found: value Direction
  setDirection(Direction.East)
               ^DwarfCode:17: error: not found: value estFacemur
  if (estFacemur())
      ^DwarfCode:26: error: not found: value Direction
setDirection(Direction.South)
             ^DwarfCode:28: error: not found: value Direction
setDirection(Direction.West)
             ^